name:                hxsc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dlilja/hxsc#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Lilja
maintainer:          dan@danlilja.se
copyright:           2017 Dan Lilja
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.HXSC, Numeric.HXSC.Internal, Numeric.HXSC.Real, Numeric.HXSC.Interval
  build-depends:       base >= 4.7 && < 5, ghc-prim
  c-sources:           cbits/round.S
  default-language:    Haskell2010
  -- ghc-options:         -fllvm -O2

executable example
  hs-source-dirs:      example
  main-is:             example.hs
  build-depends:       base >= 4.7 && < 5, hxsc, criterion, vector, mwc-random, deepseq
  default-language:    Haskell2010
  -- ghc-options:         -fllvm -O2

executable test
  hs-source-dirs:   test
  main-is:          test.hs
  build-depends:    base >= 4.7 && < 5, hxsc, ghc-prim
  default-language: Haskell2010  

source-repository head
  type:     git
  location: https://github.com/dlilja/hxsc

